--- a/package.xml
+++ b/package.xml
@@ -13,12 +13,24 @@
   <url type="repository">https://gitlab.zal.aero/aiara/ros/packages/ur_robotiq_connector</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <test_depend>roslaunch</test_depend>
+
+  <depend>roslaunch</depend>
+  <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>rospy</depend>
+  <depend>control_msgs</depend>
+  <depend>gazebo_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
+
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>effort_controllers</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>gazebo_ros_control</exec_depend>
   <exec_depend>joint_state_controller</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>position_controllers</exec_depend>
   <exec_depend>robotiq</exec_depend>
