--- a/package.xml
+++ b/package.xml
@@ -39,5 +39,8 @@
   <exec_depend>ur_gazebo</exec_depend>
 
   <export>
+    <gazebo_ros gazebo_model_path="${prefix}/models"/>
+    <gazebo_ros gazebo_media_path="${prefix}/models"/>
   </export>
+
 </package>
