--- a/zalmani_description/CMakeLists.txt
+++ b/zalmani_description/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 
-project(ur_robotiq_connector)
+project(zalmani_description)
 
 find_package(catkin REQUIRED)
 
@@ -8,7 +8,6 @@ catkin_package()
 
 install(
   DIRECTORY
-    launch
     urdf
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
