Cleaner way of setting up apt

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,10 @@ default:
       - catkin/
   before_script:
     - rm -f /etc/apt/apt.conf.d/docker-clean
-    - echo -e "APT::Archives::MaxAge "'"7"'";\nAPT::Archives::MinAge "'"2"'";\nAPT::Archives::MaxSize "'"2000"'";\nDir::Cache::Archives "'"'"${APT_CACHE_DIR}"'"'";" >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'APT::Archives::MaxAge "7";' >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'APT::Archives::MinAge "2";' >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'APT::Archives::MaxSize "2000";' >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'Dir::Cache::Archives "'${APT_CACHE_DIR}'";' >> /etc/apt/apt.conf.d/20archive
     - mkdir -p ${APT_CACHE_DIR}
     - dpkg --force-all -i ${APT_CACHE_DIR}/*.deb
     - apt-get install -f -y
@@ -28,7 +31,10 @@ install dependencies:
   stage: .pre
   before_script:
     - rm -f /etc/apt/apt.conf.d/docker-clean
-    - echo -e "APT::Archives::MaxAge "'"7"'";\nAPT::Archives::MinAge "'"2"'";\nAPT::Archives::MaxSize "'"2000"'";\nDir::Cache::Archives "'"'"$APT_CACHE_DIR"'"'";" >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'APT::Archives::MaxAge "7";' >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'APT::Archives::MinAge "2";' >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'APT::Archives::MaxSize "2000";' >> /etc/apt/apt.conf.d/20archive
+    - echo -e 'Dir::Cache::Archives "'${APT_CACHE_DIR}'";' >> /etc/apt/apt.conf.d/20archive
     - rm -rf catkin
     - shopt -s extglob
     - mkdir ${CI_PROJECT_NAME} && mv !(catkin|apt|${CI_PROJECT_NAME}) ${CI_PROJECT_NAME}
