--- a/zalmani/package.xml
+++ b/zalmani/package.xml
@@ -12,7 +12,7 @@
   <license>BSD</license>
 
   <url type="website">https://zal.aero/</url>
-  <url type="repository">https://gitlab.zal.aero/stephan.rediske/zalmani</url>
+  <url type="repository">https://github.com/srediske/zalmani</url>
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>zalmani_commander</exec_depend>
